--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -14,6 +14,8 @@
 @use './components/dashboardFooter.scss';
 @use './components/dashboardHeader.scss';
 @use './components/dashboardLayout.scss';
+@use './components/usersList.scss';
+@use './components//notesList.scss';
 
 /*----- Views -----*/
 
