Added form components and routing. Added configuration roles file. Added form for creating new users

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -16,6 +16,7 @@
 @use './components/dashboardLayout.scss';
 @use './components/usersList.scss';
 @use './components//notesList.scss';
+@use './components//form.scss';
 
 /*----- Views -----*/
 
