--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -292,6 +292,85 @@ tr {
   color: #00ce67;
 }
 
+/*----- Includes -----*/
+.form {
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 0.75rem;
+  max-width: 800px;
+}
+
+.form-checkbox-container {
+  width: fit-content;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.form-persist {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.form-title-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.form-input,
+.form-submit-button {
+  padding: 0.5rem;
+  border-radius: 1rem;
+}
+
+.form-input-text {
+  min-height: 150px;
+}
+
+.form-input-incomplete {
+  border: 1px solid #a01919;
+  outline: 1px solid #a01919;
+}
+
+.form-checkbox {
+  width: 24px;
+  height: 24px;
+}
+
+.form-select {
+  width: fit-content;
+  padding: 0.25rem;
+}
+
+.form-action-buttons {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 0.5rem;
+  position: absolute;
+  right: 0.5rem;
+}
+
+.form-row {
+  display: flex;
+  flex-flow: row nowrap;
+  gap: 2rem;
+}
+
+.form-divider {
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 0.5rem;
+}
+
+@media screen and (min-width: 768px) {
+  .form-action-buttons {
+    position: static;
+  }
+}
 /*----- Views -----*/
 /*----- Includes -----*/
 .login {
