Added persist checkbox to login form. Added PersistLogin component. Added credentials set with onQueryStarted

--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -87,6 +87,11 @@ button {
   margin-bottom: 0.5em;
 }
 
+.error-msg a:any-link {
+  color: color.$errorRed;
+  text-decoration: underline;
+}
+
 .nowrap {
   white-space: nowrap;
 }
