--- a/src/sass/components/dashboardLayout.scss
+++ b/src/sass/components/dashboardLayout.scss
@@ -9,3 +9,10 @@
   padding: 0.75rem 0.5rem 0.5rem;
   flex-grow: 1;
 }
+
+@media all and (min-width: 768px) {
+
+  .dashboard-container {
+    padding: 1rem;
+  }
+}
