--- a/src/sass/includes/_colors.scss
+++ b/src/sass/includes/_colors.scss
@@ -1,7 +1,8 @@
 
-$bgColor: #0F172A;
+$bgColor: #171717;
 $errorRed: #a01919;
 $successGreen: #00ce67;
+$slateGrey: rgb(70, 85, 85);
 
 $softerBlack: #353535;
 $softBlack: #303030;
