--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*----- Global -----*/
 /*----- Fonts & Icons -----*/
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
@@ -14,7 +13,7 @@
   list-style: none;
 }
 *::selection {
-  background-color: #0F172A;
+  background-color: #171717;
   color: #fdfdfd;
 }
 
@@ -24,14 +23,22 @@ html {
 
 body {
   min-height: 100vh;
-  background-color: #0F172A;
   color: #fdfdfd;
-  background-image: url("/images/background.jpg");
-  background-size: cover;
+  position: relative;
+}
+body::after {
+  background-color: rgb(70, 85, 85);
+  content: "";
+  inset: 0;
+  position: absolute;
+  z-index: -10;
+  background-image: url("/images/background.webp");
+  background-position: center;
   background-repeat: no-repeat;
-  background-position: center center;
+  background-size: cover;
+  opacity: 1;
   background-blend-mode: multiply;
-  box-sizing: border-box;
+  filter: blur(0.1rem);
 }
 
 #root {
@@ -70,7 +77,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p {
-  margin-bottom: 0.75rem;
   font-size: 1.1rem;
   text-wrap: pretty;
 }
@@ -99,7 +105,7 @@ button {
 .icon-button {
   width: 3rem;
   height: 3rem;
-  font-size: 2.5rem;
+  font-size: 2rem;
   background-color: transparent;
   color: #fdfdfd;
   display: grid;
@@ -164,29 +170,41 @@ button {
 
 .public-main {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   flex-grow: 1;
   border-top: 2px solid #fdfdfd;
   border-bottom: 2px solid #fdfdfd;
   padding: 1rem 0;
+  gap: 1rem;
 }
 
 .public-address {
   margin-top: 1rem;
   line-height: 1.5;
+  text-align: center;
+  line-height: 2;
+}
+
+.login-btn {
+  padding: 0.5rem;
 }
 
 /*----- Includes -----*/
 .dashboard-footer {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   flex-wrap: nowrap;
   font-size: 1rem;
   position: sticky;
   bottom: 0;
   z-index: 1;
-  background-color: #0F172A;
-  padding: 0.75rem 0.5em;
+  background-color: #171717;
+  box-shadow: inset 0 -0.75rem 1rem #202020;
+  padding: 0.75rem 0.75em;
   border-top: 1px solid #fdfdfd;
   gap: 1em;
 }
@@ -194,20 +212,59 @@ button {
   font-family: "Ubuntu Mono", monospace;
   margin-bottom: 0;
 }
+.dashboard-footer .footer-data {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5em;
+}
 
 .dashboard-footer-button {
+  display: inline-flex;
+  gap: 0.5rem;
   font-size: 1rem;
   width: auto;
   height: auto;
 }
 
+@media all and (max-width: 767px) {
+  .dashboard-footer {
+    position: unset;
+  }
+}
+@media all and (max-width: 991px) {
+  .dashboard-footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem 0.5em;
+    text-align: center;
+  }
+  .dashboard-footer a {
+    text-align: center;
+  }
+  .dashboard-footer .footer-data {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 0.5em;
+  }
+  .public .dashboard-footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
 /*----- Includes -----*/
 .dashboard-header {
   position: sticky;
   top: 0;
   z-index: 1;
-  background-color: #0F172A;
-  padding: 0.25rem 0.5rem;
+  background-color: #171717;
+  box-shadow: inset 0 2rem 1rem #202020;
+  padding: 0.5rem 0.5rem;
   border-bottom: 1px solid #fdfdfd;
 }
 
@@ -215,7 +272,6 @@ button {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  flex-wrap: wrap;
 }
 
 .dashboard-header-nav {
@@ -223,24 +279,45 @@ button {
   justify-content: flex-end;
   align-items: center;
   flex-wrap: nowrap;
-  gap: 0.5rem;
+  gap: 0.75rem;
 }
 
+@media all and (max-width: 991px) {
+  .dashboard-header {
+    text-align: center;
+  }
+  .dashboard-header-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+  }
+}
 @media all and (min-width: 768px) {
   .dashboard-header {
-    padding: 0.25rem 1rem;
+    padding: 0.75rem 1rem;
   }
 }
 /*----- Includes -----*/
 .dashboard-container {
-  min-height: 90vh;
-  padding: 0.75rem 0.5rem 0.5rem;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem 0.5rem;
   flex-grow: 1;
 }
 
 @media all and (min-width: 768px) {
   .dashboard-container {
     padding: 1rem;
+  }
+}
+@media all and (max-width: 991px) {
+  .dashboard-container {
+    padding-block: 2rem;
   }
 }
 /*----- Includes -----*/
@@ -328,7 +405,7 @@ tr {
 
 .table-button {
   padding: 0.25em;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   color: #151515;
 }
 
@@ -344,6 +421,35 @@ tr {
   text-align: left;
   border: 1px solid #151515;
   padding: 0.5em;
+}
+
+.table-th {
+  font-size: 1.35rem;
+  background-color: #202020;
+  color: #fdfdfd;
+  border-top: 2px solid #151515;
+}
+.table-th:first-of-type {
+  border-top-left-radius: 0.75rem;
+}
+.table-th:last-of-type {
+  border-top-right-radius: 0.75rem;
+}
+
+tbody tr:last-of-type td:first-of-type {
+  border-bottom-left-radius: 0.75rem;
+}
+
+tbody tr:last-of-type td:last-of-type {
+  border-bottom-right-radius: 0.75rem;
+}
+
+tbody tr:nth-of-type(even) td {
+  background-color: #c9c9c9;
+}
+
+.table-cell {
+  font-size: 1rem;
 }
 
 .table-cell:last-child {
@@ -370,10 +476,16 @@ tr {
 }
 /*----- Includes -----*/
 .form {
+  width: 35%;
   display: flex;
   flex-flow: column nowrap;
   gap: 0.75rem;
   max-width: 800px;
+  padding: 1.5rem;
+  border: 1px solid #fdfdfd;
+  border-radius: 1rem;
+  backdrop-filter: blur(0.5rem);
+  -webkit-backdrop-filter: blur(0.5rem);
 }
 
 .form-checkbox-container {
@@ -388,6 +500,7 @@ tr {
   display: flex;
   align-items: center;
   gap: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .form-title-row {
@@ -438,19 +551,85 @@ tr {
 
 .form-divider {
   display: flex;
-  flex-flow: column nowrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
   gap: 0.5rem;
+  margin-bottom: 0.75rem;
+}
+.form-divider textarea {
+  width: 100%;
+}
+.form-divider input:not([type=checkbox]) {
+  width: 100%;
+}
+.form-divider .nowrap {
+  font-family: "Ubuntu Mono", monospace;
+  font-size: 0.9rem;
 }
 
+.form-divider.select-divider {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: row;
+}
+.form-divider.select-divider label {
+  text-wrap: nowrap;
+  min-width: fit-content;
+}
+.form-divider.select-divider select {
+  width: 100%;
+  border-radius: 3rem;
+}
+.form-divider.select-divider select option {
+  background-color: darkslategrey;
+  color: white;
+}
+
+.form-divider.select-divider-roles {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: row;
+}
+.form-divider.select-divider-roles label {
+  min-width: fit-content;
+}
+.form-divider.select-divider-roles select {
+  width: 100%;
+  border-radius: 0.5rem;
+}
+
+@media screen and (max-width: 480px) {
+  .form {
+    width: 90%;
+    padding: 1rem;
+  }
+}
+@media screen and (min-width: 481px) and (max-width: 767px) {
+  .form {
+    width: 75%;
+  }
+}
 @media screen and (min-width: 768px) {
   .form-action-buttons {
     position: static;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .form {
+    width: 50%;
   }
 }
 /*----- Views -----*/
 /*----- Includes -----*/
 .login {
   min-height: 90vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   flex-grow: 1;
   border-top: 2px solid #fdfdfd;
   border-bottom: 2px solid #fdfdfd;
@@ -469,10 +648,35 @@ tr {
 .welcome-section p.date {
   font-family: "Ubuntu Mono", monospace;
   font-size: 1.1rem;
+  text-align: center;
+}
+.welcome-section .welcome-section-options {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 2rem;
+}
+.welcome-section .welcome-section-options p a {
+  padding: 0.5rem;
 }
 
-.welcome-section a::before {
-  content: "➜ ";
+.welcome-section-icon {
+  margin-right: 0.35rem;
+}
+
+@media screen and (max-width: 767px) {
+  .welcome-section p.date {
+    margin-bottom: 1rem;
+  }
+}
+@media screen and (min-width: 768px) {
+  .welcome-section {
+    gap: 3rem;
+  }
+  .welcome-section-options {
+    gap: 1.25rem;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
