--- a/src/sass/components/dashboardFooter.scss
+++ b/src/sass/components/dashboardFooter.scss
@@ -5,24 +5,58 @@
 @use '../includes/variables' as var;
 
 .dashboard-footer {
-  @include mx.flexRow(flex-start, center);
+  @include mx.flexRow(var.$between, center);
   flex-wrap: nowrap;
   font-size: 1rem;
   position: sticky;
   bottom: 0;
   z-index: 1;
   background-color: color.$bgColor;
-  padding: 0.75rem 0.5em;
+  box-shadow: inset 0 -0.75rem 1rem color.$lightBlack;
+  padding: 0.75rem 0.75em;
   border-top: 1px solid color.$white;
   gap: 1em;
   p {
     font-family: font.$monoFont;
     margin-bottom: 0;
   }
+  .footer-data {
+    @include mx.flexRowCenter();
+    gap: 1.5em;
+  }
 }
 
 .dashboard-footer-button {
+  display: inline-flex;
+  gap: 0.5rem;
   font-size: 1rem;
   width: auto;
   height: auto;
+}
+
+@media all and (max-width: 767px) {
+
+  .dashboard-footer {
+    position: unset;
+  }
+}
+
+@media all and (max-width: 991px) {
+
+  .dashboard-footer {
+    @include mx.flexColCenter();
+    padding: 1rem 0.5em;
+    text-align: center;
+    a {
+      text-align: center;
+    }
+    .footer-data {
+      @include mx.flexCol(center, flex-start);
+      gap: 0.5em;
+    }
+  }
+
+  .public .dashboard-footer {
+    @include mx.flexRowCenter();
+  }
 }
