--- a/src/sass/components/dashboardHeader.scss
+++ b/src/sass/components/dashboardHeader.scss
@@ -9,24 +9,36 @@
   top: 0;
   z-index: 1;
   background-color: color.$bgColor;
-  padding: 0.25rem 0.5rem;
+  box-shadow: inset 0 2rem 1rem color.$lightBlack;
+  padding: 0.5rem 0.5rem;
   border-bottom: 1px solid color.$white;
 }
 
 .dashboard-header-container {
   @include mx.flexRow(var.$between, center);
-  flex-wrap: wrap;
 }
 
 .dashboard-header-nav {
   @include mx.flexRow(flex-end, center);
   flex-wrap: nowrap;
-  gap: 0.5rem;
+  gap: 0.75rem;
+}
+
+@media all and (max-width: 991px) {
+
+  .dashboard-header {
+    text-align: center;
+  }
+
+  .dashboard-header-container {
+    @include mx.flexColCenter();
+    gap: 1rem;
+  }
 }
 
 @media all and (min-width: 768px) {
 
   .dashboard-header {
-    padding: 0.25rem 1rem;
+    padding: 0.75rem 1rem;
   }
 }
