--- a/src/sass/components/form.scss
+++ b/src/sass/components/form.scss
@@ -5,10 +5,16 @@
 @use '../includes/variables' as var;
 
 .form {
+  width: 35%;
   display: flex;
   flex-flow: column nowrap;
   gap: 0.75rem;
   max-width: 800px;
+  padding: 1.5rem;
+  border: 1px solid color.$white;
+  border-radius: 1rem;
+  backdrop-filter: blur(0.5rem);
+  -webkit-backdrop-filter: blur(0.5rem);
 }
 
 .form-checkbox-container {
@@ -23,6 +29,7 @@
   display: flex;
   align-items: center;
   gap: 0.5rem;
+  margin-bottom: 0.5rem
 }
 
 .form-title-row {
@@ -68,15 +75,75 @@
 }
 
 .form-divider {
-  display: flex;
-  flex-flow: column nowrap;
+  @include mx.flexCol(center, flex-start);
   gap: 0.5rem;
+  margin-bottom: 0.75rem;
+  textarea {
+    width: 100%;
+  }
+  input:not([type=checkbox]) {
+    width: 100%;
+  }
+  .nowrap {
+    font-family: font.$monoFont;
+    font-size: 0.9rem;
+  }
 }
 
+.form-divider.select-divider {
+  @include mx.flexRow(flex-start, center);
+  flex-direction: row;
+  label {
+    text-wrap: nowrap;
+    min-width: fit-content;
+  }
+  select {
+    width: 100%;
+    border-radius: 3rem;
+    option {
+      background-color: darkslategrey;
+      color: white;
+    }
+  }
+}
+
+.form-divider.select-divider-roles {
+  @include mx.flexRow(flex-start, flex-start);
+  flex-direction: row;
+  label {
+    min-width: fit-content;
+  }
+  select {
+    width: 100%;
+    border-radius: 0.5rem;
+  }
+}
+
+@media screen and (max-width: 480px) {
+
+  .form {
+    width: 90%;
+    padding: 1rem;
+  }
+}
+
+@media screen and (min-width: 481px) and (max-width: 767px) {
+  
+  .form {
+    width: 75%;
+  }
+}
 
 @media screen and (min-width: 768px) {
 
   .form-action-buttons {
     position: static;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  
+  .form {
+    width: 50%;
   }
 }
