--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -24,14 +24,14 @@ html {
 
 body {
   min-height: 100vh;
-  background-color: #0F172A;
   color: color.$white;
-  background-image: url('/images/background.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-blend-mode: multiply;
-  box-sizing: border-box;
+  position: relative;
+  &::after {
+    background-color: color.$slateGrey;
+    @include mx.bgHeroImg(-10, '/images/background.webp', 1);
+    background-blend-mode: multiply;
+    filter: blur(0.10rem);
+  }
 }
 
 #root {
@@ -70,7 +70,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p {
-  margin-bottom: 0.75rem;
   font-size: 1.1rem;
   text-wrap: pretty;
 }
@@ -99,7 +98,7 @@ button {
 .icon-button {
   width: 3rem;
   height: 3rem;
-  font-size: 2.5rem;
+  font-size: 2rem;
   background-color: transparent;
   color: color.$white;
   display: grid;
