--- a/src/sass/views/login.scss
+++ b/src/sass/views/login.scss
@@ -7,6 +7,7 @@
 
 .login {
   min-height: 90vh;
+  @include mx.flexColCenter();
   flex-grow: 1;
   border-top: 2px solid color.$white;
   border-bottom: 2px solid color.$white;
